# adi-llm-uzu-plugin

./: Cargo.toml  plugin.toml
src/: lib.rs
