[package]
name = "adi-llm-uzu-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ADI Uzu LLM plugin for local inference on Apple Silicon"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi = { path = "../lib-plugin-abi" }
lib-client-uzu = { path = "../lib-client-uzu" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
